--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitAny": true,
     "alwaysStrict": true,
     "sourceMap": true,
+    "allowJs": true,
     "moduleResolution": "node",
     "outDir": "./dist",
     "module": "es6",
