--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
-  "name": "typescript-react-app",
+  "name": "eliot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "npx webpack"
+    "start": "run-p dev:*",
+    "start:devtools": "npx react-devtools",
+    "start:electron": "npx electron main http://localhost:5500",
+    "start:webpack": "npx webpack"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^16.9.49",
+    "@types/electron": "^1.6.10",
+    "@types/react": "^16.9.45",
     "@types/react-dom": "^16.9.8",
-    "css-loader": "^4.3.0",
+    "@types/react-transition-group": "^4.4.0",
+    "electron": "^9.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sass-loader": "^10.0.2",
+    "react-transition-group": "^4.4.1",
+    "eventemitter2": "^6.4.3"
+  },
+  "devDependencies": {
+    "yargs": "^15.4.1",
+    "npm-run-all": "^4.1.5",
+    "react-devtools": "^4.9.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "typescript": "^3.9.7",
+    "node-sass": "^4.14.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.1",
+    "sass-loader": "^9.0.3",
+    "scss-loader": "0.0.1",
     "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "ts-loader": "^8.0.2"
   }
 }
