--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,10 @@
     "noImplicitAny": true,
     "alwaysStrict": true,
     "sourceMap": true,
-    "allowJs": true,
     "moduleResolution": "node",
-    "outDir": "./dist",
+    "outDir": "./dist/",
     "module": "es6",
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom"],
     "jsx": "react"
   }
