Revert "changed several things"
This reverts commit 4eeaeb80705f650fe92a0fdf7c05d2ad6f97c71b.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,11 @@
     "noImplicitAny": true,
     "alwaysStrict": true,
     "sourceMap": true,
+    "allowJs": true,
     "moduleResolution": "node",
-    "outDir": "./dist/",
+    "outDir": "./dist",
     "module": "es6",
-    "target": "es6",
+    "target": "es5",
     "lib": ["dom"],
     "jsx": "react"
   }
